# Youpi-SFML-Framework

./: .gitignore  CMakeLists.txt  README.md
exemples/verlet/: CMakeLists.txt
exemples/verlet/include/: gridVal.h
exemples/verlet/src/: entityConstructors.hpp  main.cpp
exemples/verlet/src/components/: components.hpp  drawable.hpp  sound.hpp  transform.hpp  verlet.hpp
exemples/verlet/src/systems/: dragSystem.hpp  renderCircle.hpp  renderGrid.hpp  renderVertexArray.hpp  systems.hpp  verletSystem.hpp
include/YPI/: accessibility.hpp  data.hpp  ecs.hpp  graphics.hpp  math.hpp  network.hpp  system.hpp
include/YPI/accessibility/: Lang.hpp
include/YPI/data/: Grid.hpp  MusicManager.hpp  Quadtree.hpp  ResourceManager.hpp  SafeDequeue.hpp  SafeUnorderedMap.hpp  SoundManager.hpp
include/YPI/graphics/color/: color.hpp
include/YPI/graphics/effects/: AnimationStates.hpp  Fade.hpp  Shaders.hpp  SpriteSheet.hpp  effects.hpp
include/YPI/graphics/gui/: AComponent.hpp  Button.hpp  Container.hpp  ContainerGraph.hpp  DropDownList.hpp  DropDownList.inl  Hierarchy.hpp  Hierarchy.inl  Image.hpp  InputBox.hpp  InputBox.inl  Label.hpp  LayerBackground.hpp  Panel.hpp  ProgressBar.hpp  ScrollBar.hpp  Slider.hpp  TickBox.hpp  WindowContainer.hpp
include/YPI/graphics/window/: Camera.hpp  RenderTarget.hpp  RenderTexture.hpp  Window.hpp
include/YPI/math/: Rect.hpp  Transform.hpp  Vector2.hpp  math.hpp  numberGenerator.hpp
include/YPI/network/: Packet.hpp  UDPClient.hpp  UDPServer.hpp
include/YPI/system/: AECSScene.hpp  AScene.hpp  Chrono.hpp  Config.hpp  Exception.hpp  Mouse.hpp  Observer.hpp  SceneManager.hpp  Timer.hpp  context.hpp  log_buffer.hpp  log_stream.hpp  logger.hpp  parsing.hpp  utils.hpp
include/lib_headers/: common.hpp
src/core/chrono/: Chrono.cpp  Timer.cpp
src/core/effects/: AnimationStates.cpp  Fade.cpp  SpriteSheet.cpp
src/core/gui/: Button.cpp  Container.cpp  ContainerGraph.cpp  DropDownList.inl  Hierarchy.inl  Image.cpp  InputBox.inl  Label.cpp  LayerBackground.cpp  Panel.cpp  ProgressBar.cpp  ScrollBar.cpp  Slider.cpp  TickBox.cpp  WindowContainer.cpp
src/core/net/: Packet.cpp  UDPClient.cpp  UDPServer.cpp
src/core/resource_manager/music_manager/: MusicManager.cpp
src/core/resource_manager/sound_manager/: SoundManager.cpp
src/core/scene/: SceneManager.cpp
src/core/transform/: Transform.cpp
src/core/window/: Camera.cpp  Window.cpp
src/helper/data_structure/: SafeDequeue.inl  SafeUnorderedMap.inl
src/helper/info/: log_buffer.cpp  log_stream.cpp
src/helper/math/: math.cpp
src/helper/number_generator/: numberGenerator.cpp
ypi/: CMakeLists.txt
ypi/include/: common.hpp
ypi/lib_headers/: common.hpp  sfml.hpp
ypi/src/core/chrono/: Chrono.cpp  Chrono.hpp
ypi/src/core/config/: Config.hpp
ypi/src/core/ecs/: coordinator.hpp  signature.hpp
ypi/src/core/ecs/component/: component.hpp  componentManager.hpp
ypi/src/core/ecs/entity/: entity.hpp  entityManager.hpp
ypi/src/core/ecs/system/: system.hpp  systemManager.hpp
ypi/src/core/effects/: AnimationStates.cpp  AnimationStates.hpp  Fade.cpp  Fade.hpp  SpriteSheet.cpp  SpriteSheet.hpp
ypi/src/core/event/: Keyboard.cpp  Keyboard.hpp  Observer.hpp
ypi/src/core/exception/: Exception.hpp
ypi/src/core/gui/: AComponent.hpp  Button.cpp  Button.hpp  Container.cpp  Container.hpp  Image.cpp  Image.hpp  InputBox.cpp  InputBox.hpp  Label.cpp  Label.hpp  LayerBackground.cpp  LayerBackground.hpp  ProgressBar.cpp  ProgressBar.hpp
ypi/src/core/lang/: Lang.hpp
ypi/src/core/net/: Packet.cpp  Packet.hpp  UDPClient.cpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp  config.ini
ypi/src/core/rect/: Rect.hpp
ypi/src/core/resource_manager/: ResourceManager.hpp
ypi/src/core/resource_manager/music_manager/: MusicManager.cpp  MusicManager.hpp
ypi/src/core/scene/: AScene.hpp  SceneManager.hpp
ypi/src/core/space_partitionning/: Grid.hpp  Quadtree.hpp
ypi/src/core/transform/: Transform.cpp  Transform.hpp
ypi/src/core/vector2/: Vector2.hpp
ypi/src/core/window/: Window.cpp  Window.hpp
ypi/src/core/window/view/: View.cpp  View.hpp
ypi/src/helper/: SafeDequeue.hpp  SafeDequeue.inl  SafeUnorderedMap.hpp  SafeUnorderedMap.inl  color.hpp  parsing.hpp  utils.hpp
ypi/src/helper/effects/: effects.hpp
ypi/src/helper/info/: context.hpp  log_stream.cpp  log_stream.hpp  logger.hpp
ypi/src/helper/math/: math.cpp  math.hpp
ypi/src/helper/number_generator/: numberGenerator.cpp  numberGenerator.hpp
